--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <a name="tablero"> </a>
             <div class="tablero">  
-                <h1>¡Bienvenido!</h1><br>     
+                <h1>¡Bienvenido Jugador!</h1><br>     
             </div>
             <a name="partidas">
                 <div class="partidas">
